--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ fastapi
 uvicorn
 pydantic
 gTTS
-Pillow<10
-moviepy
+Pillow
+moviepy==1.0.3
+google-api-python-client
+google-auth-oauthlib
 python-dotenv
 Jinja2
